add test from hw2

--- a/mini-python-ocaml/Makefile
+++ b/mini-python-ocaml/Makefile
@@ -3,6 +3,9 @@ all: minipython.exe
 	./minipython.exe --debug test.py
 	gcc -no-pie -g test.s && ./a.out
 
+tests: minipython.exe
+	bash run-tests "dune exec ./minipython.exe"
+
 minipython.exe:
 	dune build minipython.exe
 
