--- a/mini-python-ocaml/Makefile
+++ b/mini-python-ocaml/Makefile
@@ -12,6 +12,11 @@ type: minipython.exe
 minipython.exe:
 	dune build minipython.exe
 
+test_typing:
+	@echo "Running tests..."
+	cd tests-mini-python && ./test -2 ../minipython.exe
+	cd ..
+
 clean:
 	dune clean
 
